# TolinoHacks

./: .gitattributes  .gitignore  README.md  adbd  applyHacksAfterUpdate.sh  flake.nix  openSettings.sh  restoreEPubProd.sh  setupHacks.sh
apkPatches/: makeDebugOptionsAccessible.patch  removeAdvertisement.patch
helper/: cleanupAPKs.sh  flashBootImage.sh  flashRecoveryImage.sh  patchBootImage.sh  patchEPubProd.sh  updateSettings.sh
tools/binary_patcher/: CMakeLists.txt  Makefile
tools/binary_patcher/src/: binary_patcher.cpp
